--- a/Html2Pdf/Html2Pdf.csproj
+++ b/Html2Pdf/Html2Pdf.csproj
@@ -204,6 +204,12 @@
   <ItemGroup>
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Html2Pdf.Lib\Html2Pdf.Lib.csproj">
+      <Project>{77F19087-421D-46CA-BEC2-E10A0BB114AF}</Project>
+      <Name>Html2Pdf.Lib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
